metrique-macro/src/snapshots/metrique_macro__tests__aggregate_entry_mode.snap
---
source: metrique-macro/src/lib.rs
expression: parsed_file
---
#[metrics]
#[derive(Default)]
struct AggregatedApiCall {
    #[metrics(unit = Millisecond)]
    latency: <Histogram<
        Duration,
        SortAndMerge,
    > as metrique_aggregation::aggregate::AggregateValue<
        <Timer as metrique_core::CloseValue>::Closed,
    >>::Aggregated,
}
impl metrique_aggregation::sink::MergeOnDropExt for ApiCall {}
impl metrique_aggregation::aggregate::AggregateEntry for ApiCall {
    type Source = <Self as metrique_core::CloseValue>::Closed;
    type Aggregated = AggregatedApiCall;
    type Key = ();
    fn merge_entry(accum: &mut Self::Aggregated, entry: Self::Source) {
        <Histogram<
            Duration,
            SortAndMerge,
        > as metrique_aggregation::aggregate::AggregateValue<
            <Timer as metrique_core::CloseValue>::Closed,
        >>::add_value(&mut accum.latency, entry.latency);
    }
    fn new_aggregated(key: &Self::Key) -> Self::Aggregated {
        Self::Aggregated::default()
    }
    fn key(source: &Self::Source) -> Self::Key {
        ()
    }
}
#[metrics]
struct ApiCall {
    latency: Timer,
}
