metrique-macro/src/snapshots/metrique_macro__tests__aggregate_generates_struct.snap
---
source: metrique-macro/src/lib.rs
expression: parsed_file
---
#[metrics]
#[derive(Default)]
pub struct AggregatedApiCall {
    #[metrics(unit = Millisecond)]
    latency: <Histogram<Duration, SortAndMerge> as AggregateValue<Duration>>::Aggregated,
    #[metrics(unit = Byte)]
    response_size: <Counter as AggregateValue<usize>>::Aggregated,
    response_value: <MergeOptions<
        LastValueWins,
    > as AggregateValue<Option<String>>>::Aggregated,
}
#[metrics]
#[derive(Clone)]
pub struct ApiCall {
    #[metrics(unit = Millisecond)]
    latency: Duration,
    #[metrics(unit = Byte)]
    response_size: usize,
    response_value: Option<String>,
}
