metrique-macro/src/snapshots/metrique_macro__tests__aggregate_strips_attributes.snap
---
source: metrique-macro/src/lib.rs
expression: parsed_file
---
#[metrics]
#[derive(Clone)]
pub struct ApiCall {
    #[metrics(unit = Millisecond)]
    latency: Duration,
    #[metrics(unit = Byte)]
    response_size: usize,
}
