metrique-macro/src/snapshots/metrique_macro__tests__aggregate_with_key.snap
---
source: metrique-macro/src/lib.rs
expression: parsed_file
---
#[metrics]
struct AggregatedApiCallWithOperation {
    endpoint: String,
    #[metrics(unit = Millisecond)]
    latency: <Histogram<
        Duration,
    > as metrique_aggregation::aggregate::AggregateValue<Duration>>::Aggregated,
}
impl metrique_aggregation::aggregate::AggregateEntry for ApiCallWithOperation {
    type Source = Self;
    type Aggregated = AggregatedApiCallWithOperation;
    type Key<'a> = &'a String;
    fn merge_entry<'a>(
        accum: &mut Self::Aggregated,
        entry: std::borrow::Cow<'a, Self::Source>,
    ) {
        <Histogram<
            Duration,
        > as metrique_aggregation::aggregate::AggregateValue<
            Duration,
        >>::add_value(&mut accum.latency, &entry.latency);
    }
    fn new_aggregated<'a>(key: Self::Key<'a>) -> Self::Aggregated {
        AggregatedApiCallWithOperation {
            endpoint: key.to_owned(),
            latency: Default::default(),
        }
    }
    fn key<'a>(source: &'a Self::Source) -> Self::Key<'a> {
        &source.endpoint
    }
}
#[metrics]
#[derive(Clone)]
struct ApiCallWithOperation {
    endpoint: String,
    #[metrics(unit = Millisecond)]
    latency: Duration,
}
