metrique-macro/src/snapshots/metrique_macro__tests__debug_derive_passthrough_struct.snap
---
source: metrique-macro/src/lib.rs
expression: parsed_file
---
#[derive(Debug, Clone)]
struct Metrics {
    field: usize,
}
#[doc(hidden)]
#[allow(clippy::type_complexity)]
#[derive(Debug, Clone)]
pub struct MetricsEntry {
    #[deprecated(
        note = "these fields will become private in a future release. To introspect an entry, use `metrique::writer::test_util::test_entry`"
    )]
    #[doc(hidden)]
    field: <usize as metrique::CloseValue>::Closed,
}
const _: () = {
    impl MetricsEntry {
        #[doc(hidden)]
        #[inline(always)]
        fn __metrique_descriptor() -> &'static ::metrique::writer::core::EntryDescriptor {
            {
                static __METRIQUE__FLAGS_0: [::metrique::writer::core::FieldFlag; 0usize] = [];
                static __METRIQUE__SKIPPED_0: [::metrique::writer::core::FieldFlag; 0usize] = [];
                static __METRIQUE__FIELDS: [::metrique::writer::core::FieldDescriptor; 1usize] = [
                    ::metrique::writer::core::FieldDescriptor::builder("field")
                        .pascal("Field")
                        .snake("field")
                        .kebab("field")
                        .screaming_snake("FIELD")
                        .flags(&__METRIQUE__FLAGS_0)
                        .skipped_flags(&__METRIQUE__SKIPPED_0)
                        .maybe_unit(
                            ::metrique::writer::core::Unit::to_option(
                                <<usize as ::metrique::CloseValue>::Closed as ::metrique::writer::core::Value>::UNIT,
                            ),
                        )
                        .shape(
                            <<usize as ::metrique::CloseValue>::Closed as ::metrique::writer::core::Value>::SHAPE,
                        )
                        .build(),
                ];
                static __METRIQUE__DESC: ::metrique::writer::core::EntryDescriptor = ::metrique::writer::core::EntryDescriptor::builder(
                        "Metrics",
                        &__METRIQUE__FIELDS,
                    )
                    .maybe_timestamp(None)
                    .build();
                &__METRIQUE__DESC
            }
        }
    }
    #[expect(deprecated)]
    impl<NS: ::metrique::NameStyle> ::metrique::InflectableEntry<NS> for MetricsEntry {
        fn write<'__metrique_write>(
            &'__metrique_write self,
            writer: &mut impl ::metrique::writer::EntryWriter<'__metrique_write>,
        ) {
            let __metrique_self = self;
            ::metrique::writer::EntryWriter::value(
                writer,
                {
                    struct FieldPreserve;
                    impl ::metrique::concat::ConstStr for FieldPreserve {
                        const VAL: &'static str = "field";
                    }
                    struct FieldKebab;
                    impl ::metrique::concat::ConstStr for FieldKebab {
                        const VAL: &'static str = "field";
                    }
                    struct FieldPascal;
                    impl ::metrique::concat::ConstStr for FieldPascal {
                        const VAL: &'static str = "Field";
                    }
                    struct FieldSnake;
                    impl ::metrique::concat::ConstStr for FieldSnake {
                        const VAL: &'static str = "field";
                    }
                    ::metrique::concat::const_str_value::<
                        <NS as ::metrique::NameStyle>::Inflect<
                            FieldPreserve,
                            FieldPascal,
                            FieldSnake,
                            FieldKebab,
                        >,
                    >()
                },
                &__metrique_self.field,
            );
        }
        fn sample_group(
            &self,
        ) -> impl ::std::iter::Iterator<
            Item = (::std::borrow::Cow<'static, str>, ::std::borrow::Cow<'static, str>),
        > {
            let __metrique_self = self;
            ::std::iter::empty()
        }
        fn descriptors(&self) -> ::metrique::writer::core::Descriptors<'_> {
            ::metrique::writer::core::Descriptors::available(
                ::std::iter::once(
                    ::metrique::writer::core::DescriptorRef::from_static(
                        MetricsEntry::__metrique_descriptor(),
                        <NS as ::metrique::NameStyle>::DESCRIPTOR_STYLE_INDEX,
                    ),
                ),
            )
        }
    }
};
impl metrique::CloseValue for Metrics {
    type Closed = MetricsEntry;
    fn close(self) -> Self::Closed {
        macro_rules! __metrique_self_expr {
            () => {
                self
            };
        }
        #[allow(deprecated)]
        MetricsEntry {
            field: metrique::CloseValue::close(__metrique_self_expr!().field),
        }
    }
}
#[doc = concat!(
    "Metrics guard returned from [`", "Metrics",
    "::append_on_drop`], closes the entry and appends the metrics to a sink when dropped."
)]
type MetricsGuard<Q = ::metrique::DefaultSink> = ::metrique::AppendAndCloseOnDrop<
    Metrics,
    Q,
>;
#[doc = concat!(
    "Metrics handle returned from [`", "MetricsGuard", "::handle`], similar to an `Arc<",
    "MetricsGuard", ">`."
)]
type MetricsHandle<Q = ::metrique::DefaultSink> = ::metrique::AppendAndCloseOnDropHandle<
    Metrics,
    Q,
>;
impl Metrics {
    ///Creates an AppendAndCloseOnDrop that will be automatically appended to `sink` on drop.
    fn append_on_drop<
        Q: ::metrique::writer::EntrySink<::metrique::RootEntry<MetricsEntry>> + Send
            + Sync + 'static,
    >(self, sink: Q) -> MetricsGuard<Q> {
        ::metrique::append_and_close(self, sink)
    }
}
